fix alignment of times within list

--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,7 @@
 .stopTimeRow {
   color: var(--primary700);
   display: grid;
-  grid-template-columns: 44% 10% min-content auto;
+  grid-template-columns: 44% 8% min-content auto;
   padding: 8px;
 }
 
@@ -142,10 +142,9 @@
 
 .colon {
   text-align: center;
-}
-
-.minuteAndNote {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: baseline;
 }
 
@@ -156,6 +155,10 @@
 .stopTimeNote {
   font-size: 12px;
   margin-left: 0.5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 8px;
 }
 
 .countDown {
